--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.13",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.6"
+  },
   "bugs": {
     "url": "https://github.com/abionamike/memories-app/issues"
   },
